# biolens

./: .editorconfig  404.html  Cargo.toml  Directory.Build.props  README.md  biolens.sln  codecov.yml  index.html  install.ps1  install.sh  logging.toml  sitemap.xml
core/: Cargo.toml
core/src/: cli.rs  lib.rs  logging.rs  main.rs
core/src/commands/: common.rs  mod.rs
core/src/commands/bamcov/: definition.rs  handler.rs  mod.rs
core/src/commands/seqcomp/: definition.rs  handler.rs  mod.rs
core/src/commands/validate/: common.rs  definition.rs  fasta_validator.rs  formats.rs  handler.rs  mod.rs  sam_validator.rs
core/src/commands/validate/fasta/: mod.rs  options.rs  result.rs  summary.rs  validator.rs
core/src/commands/validate/sam/: mod.rs  validator.rs
core/tests/commands/validate/fasta/: fasta_tests.rs  mod.rs  test_format_ambiguity_codes_valid.rs  test_format_auto_detects_nucleotide.rs  test_format_comment_lines_valid.rs  test_format_different_line_lengths.rs  test_format_disallow_comments_fails.rs  test_format_duplicate_headers_fails.rs  test_format_edge_case_only_header_no_sequence.rs  test_format_empty_file_fails.rs  test_format_empty_header_fails.rs  test_format_empty_sequences_fail.rs  test_format_file_with_bom.rs  test_format_gc_content_calculation.rs  test_format_handles_dos_line_endings.rs  test_format_header_only_fails.rs  test_format_header_too_long_warning.rs  test_format_headers_only_fails.rs  test_format_interleaved_vs_sequential.rs  test_format_invalid_file_path.rs  test_format_invalid_nucleotide_characters_fails.rs  test_format_invalid_protein_characters_fails.rs  test_format_lenient_validation.rs  test_format_long_sequence_lines_warning.rs  test_format_lowercase_nucleotides_valid.rs  test_format_many_small_sequences.rs  test_format_missing_final_newline.rs  test_format_mixed_case_nucleotides_valid.rs  test_format_multi_line_sequences.rs  test_format_multiple_comment_lines.rs  test_format_multiple_sequences_valid.rs  test_format_no_headers_fails.rs  (+19 more)
core/tests/logging/: mod.rs  test_build_config_from_args.rs  test_config_default.rs  test_get_log_directory.rs  test_get_log_level.rs  test_save_and_load_config.rs
(+99 files in other folders)
